# ckanext-dbquery

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  conftest.py  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test-extension.yml
ckanext/dbquery/: model.py  plugin.py
ckanext/dbquery/actions/: __init__.py  dbquery.py
ckanext/dbquery/assets/: script.js  webassets.yml
ckanext/dbquery/assets/css/: dbquery.css
ckanext/dbquery/auth/: __init__.py  dbquery.py
ckanext/dbquery/blueprints/: __init__.py  dbquery.py
ckanext/dbquery/migration/: alembic.ini  env.py
ckanext/dbquery/migration/alembic/versions/: b1fa0dbfb105_create_dbquery_execute_table.py
ckanext/dbquery/migration/dbquery/: alembic.ini
ckanext/dbquery/migration/dbquery/versions/: 001_create_dbquery_executed_table.py  b1fa0dbfb105_create_dbquery_execute_table.py
ckanext/dbquery/templates/admin/: base.html
ckanext/dbquery/templates/dbquery/: history.html  index.html  queries.html
ckanext/dbquery/templates/package/: read_base.html
ckanext/dbquery/tests/: __init__.py  conftest.py  fixtures.py  test_actions.py  test_auth.py  test_blueprints.py  test_helpers.py  test_integration.py  test_model.py  test_plugin.py  test_plugin_2.py  test_templates.py
