[project]
name = "ckanext-dbquery"
version = "0.2.0"
description = "CKAN extension for Universities in Argentina"
readme = "README.md"
authors = [
    {name = "Universidad", email = "unckan@data99.com.ar"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "Database", "Query" ]
dependencies = []

[project.urls]
Homepage = "https://github.com/UNC/ckanext-dbquery"

[project.entry-points."ckan.plugins"]
dbquery = "ckanext.dbquery.plugin:DbqueryPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
