[project]
name = "ckanext-dbquery"
version = "0.2.0"
description = "CKAN extension for querying the internal CKAN database"
readme = "README.md"
authors = [
    {name = "Andres Vazquez", email = "andres@data99.com.ar"},
    {name = "German Kay Favaro", email = "germankay@gmail.com"}

]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

keywords = [ "CKAN", "Database", "Query" ]
dependencies = []

[project.urls]
Homepage = "https://github.com/UNC/ckanext-dbquery"

[project.entry-points."ckan.plugins"]
dbquery = "ckanext.dbquery.plugin:DbqueryPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
